Car port: Kia Soul EV

--- a/opendbc_repo/opendbc/car/torque_data/override.toml
+++ b/opendbc_repo/opendbc/car/torque_data/override.toml
@@ -99,3 +99,4 @@ legend = ["LAT_ACCEL_FACTOR", "MAX_LAT_ACCEL_MEASURED", "FRICTION"]
 "KIA_K7" = [2.3, 2.3, 0.1]
 "KIA_K7_HEV" = [2.3, 2.3, 0.1]
 "KIA_K9" = [2.3, 2.3, 0.1]
+"KIA_SOUL_EV" = [2.3, 2.3, 0.1]
